--- a/page1.html
+++ b/page1.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Instant Pay</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -63,15 +64,16 @@
 
   <div class="ctr1">
     <div class="box">
-      <b><p class="prr1">50M +</p></b>
+      <b><p class="prr1">50M + <i class="fas fa-download"></i> </p></b>
       <p class="Prr2">App downloads</p>
     </div>
     <div class="box">
-      <b><p class="prr1">50M +</p></b>
+      <b><p class="prr1">50M +  <i class="fas fa-smile"></i> </p></b>
       <p class="Prr2">Happy user</p>
     </div>
     <div class="box">
-      <b><p class="prr1">16000 Crore+</p></b>
+      <b><p class="prr1">1600 Cr + 	<i class="fas fa-hand-holding-usd" style="color: rgb(252, 173, 3);; font-size: 24px;"></i>
+  <span style="font-weight: bold; color: rgb(252, 173, 3);"></p></b>
       <p class="Prr2">Loan Disbursed</p>
     </div>
     <div class="box">
