--- a/page1.html
+++ b/page1.html
@@ -94,7 +94,7 @@
 
 
   <footer>
-    &copy; 2025 Instant Pay. All rights reserved.
+    &copy; 2025-2030 Instant Pay. All rights reserved.
   </footer>
 
 </body>
